[metadata]
name = genericrawl
version = 1.2.0
author = Aaron Friesen
author_email = maugrift@maugrift.com
description = A generic roguelike following the Python 3/libtcod tutorial 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maugrift/genericrawl
license = MIT License
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
packages =
	genericrawl
	genericrawl.components
	genericrawl.data
	genericrawl.map
install_requires =
	tcod ~= 13.6.1
python_requires >= 3.10

[options.entry_points]
console_scripts =
	genericrawl = genericrawl.main:main
